--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-container">
-                    <img src="images/profile.jpg" alt="Sealtiel Jayobo">
+                    <img src="images/profile.jpg" alt="images/tookbyfel.jpg">
                 </div>
                 <div class="floating-card">
                     <span class="status">Currently</span>
