--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="about-grid">
                 <div class="about-image">
                     <div class="image-container">
-                        <img src="assets/profile.jpg" alt="Sealtiel Jayobo">
+                        <img src="assets/profile.jpg" alt="images/sealtiel-blu.jpg">
                     </div>
                 </div>
                 <div class="about-content">
