--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-container">
-                    <img src="images/profile.jpg" alt="images/tookbyfel.jpg">
+                    <img src="images/tookbyfel.jpg" alt="tookbyfel">
                 </div>
                 <div class="floating-card">
                     <span class="status">Currently</span>
@@ -86,7 +86,7 @@
             <div class="about-grid">
                 <div class="about-image">
                     <div class="image-container">
-                        <img src="assets/profile.jpg" alt="images/sealtiel-blu.jpg">
+                        <img src="images/sealtiel-blu.jpg" alt="Sealtiel blu">
                     </div>
                 </div>
                 <div class="about-content">
